--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "devportfolio-template",
-  "version": "1.2.2",
+  "name": "porfolio",
+  "version": "1.0.0",
   "description": "",
   "main": "js/scripts.js",
   "scripts": {
