--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "coding",
     "dev"
   ],
-  "author": "Ryan Fitzgerald",
+  "author": "Ajiharan Baskaran",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.0",
